Add homepage deps

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
                 <div class="heading-brand">DamDwell</div>
-                <a href="/listing" class="btn btn-dark" target="_blank">Explore Rentals</a>
+                <a href="/listing" class="btn btn-dark">Explore Rentals</a>
             </div>
         </div>
         <div class="row mt-6">
